--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
