--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug Android",
+            "name": "Attach to packager",
             "cwd": "${workspaceFolder}",
+            "request": "attach",
             "type": "reactnative",
-            "request": "launch",
-            "platform": "android"
+            "port": 19000
         }
     ]
 }
