--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-constants": "~11.0.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-permissions": "~12.1.1",
     "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
