--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-constants": "~11.0.1",
-    "expo-image-picker": "~10.2.2",
+    "expo-image-picker": "^10.2.3",
     "expo-permissions": "~12.1.1",
     "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
